--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -2,14 +2,9 @@
 <html lang="en" dir="ltr">
 <head>
 	<meta charset="UTF-8">
-	<title>HTML File</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff">
+	 <title>My First HTML File</title>
+	<link rel="icon" type="image/x-icon" sizes="32x32" href="./favicon.ico">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon.png">
 </head>
 <body>
 </body>
