--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	 <title>My First HTML File</title>
-	<link rel="icon" type="image/x-icon" sizes="32x32" href="./favicon.ico">
-	<link rel="icon" type="image/png" sizes="16x16" href="./favicon.png">
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
+	<link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
 </body>
