--- a/html_advanced/article.html
+++ b/html_advanced/article.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
         <meta charset="UTF-8">
-        <title>Article - Techiumi</title>
+        <title>Article - Techium</title>
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link rel="icon" type="image/png" href="./favicon.png">
 </head>
