--- a/html_advanced/5-index.html
+++ b/html_advanced/5-index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-        <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<title>Homepage - Techium</title>
-	<meta name="description" content="Techium is a digital agency">
-        <title>My First HTML File</title>
-        <link rel="icon" type="image/x-icon" href="./favicon.ico">
-        <link rel="icon" type="image/png" href="./favicon.png">
-</head>
-<body>
+
+  <head>
+    <meta charset="utf_8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency">
+    <link rel="icon" type="image/x-icon" href="./image/favicon.ico">
+    <link rel="icon" type="image/png" href="./image/favicon.png">
+  </head>
+  <body>
+    <header>
+      Header
+    </header>
     <main>
-        <header>
-            Header
-        </header><section>
-            Hero section
-        </section>
-        <section>
-            Services section
-        </section>
-        <section>
-            Works section
-        </section>
-        <section>
-            About section
-        </section>
-        <section>
-            Latest news section
-        </section>
-        <section>
-            Testimonials section
-        </section>
-        <section>
-            Contact section
-        </section>
+      <section>
+        Hero section
+      </section>
+      <section>
+        Services section
+      </section>
+      <section>
+        Works section
+      </section>
+      <section>
+        About section
+      </section>
+      <section>
+        Latest news section
+      </section>
+      <section>
+        Testimonials section
+      </section>
+      <section>
+        Contact section
+      </section>
     </main>
-</body>
     <footer>
-        Footer
+      Footer
     </footer>
+  </body>
+  
 </html>
