--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="rtl">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0; viewport-fit=cover" />
+    <meta charset="utf-8" />
+    <meta name="description" content="Techium is a digital agency" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Styleguide - Techium</title>
-    <meta name=" description" content="Techium is a digital agency" />
-    <link rel=" icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel=" icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.png" type="image/png" />
 </head>
 
 <body>
-    <header>
-    </header>
+
+    <header></header>
     <main>
         <section>
             <header>
@@ -27,23 +27,14 @@
         </section>
         <section>
             <header>
-                <h2>
-                    Paragraph
-                </h2>
+                <h2>Paragraph</h2>
             </header>
-            <h2>
-                Heading with a subtitle
-            </h2>
-            <p>
-                This is my subtitle
-            </p>
-            <p>
-                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
+            <h2>Heading with a subtitle</h2>
+            <p>This is my subtitle</p>
+            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
                 faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
-                varius montes viverra nibh in adipiscing blandit tempus accumsan.
-            </p>
+                varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
         </section>
-
         <!-- Lists -->
         <section>
             <header>
@@ -56,14 +47,12 @@
                     <li>Sagittis adipiscing lorem eleifend.</li>
                     <li>Felis enim feugiat dolore viverra.</li>
                 </ul>
-
                 <h3>Ordered</h3>
                 <ol>
                     <li>Dolor pulvinar etiam magna etiam.</li>
                     <li>Sagittis adipiscing lorem eleifend.</li>
                     <li>Felis enim feugiat dolore viverra.</li>
                 </ol>
-
                 <h3>Definition</h3>
                 <dl>
                     <dt>Definition List title</dt>
@@ -77,8 +66,7 @@
                 </dl>
             </div>
         </section>
-
-        <!-- Horizontal rule -->
+        <!--Horizontal rule-->
         <section>
             <header>
                 <h2>Horizontal rule</h2>
@@ -87,11 +75,10 @@
                 <hr>
             </div>
         </section>
-
-        <!-- Blockquotes -->
+        <!--Blockquotes-->
         <section>
             <header>
-                <h2>lockquotes</h2>
+                <h2>Blockquotes</h2>
             </header>
             <div>
                 <h3>Inline quote</h3>
@@ -100,20 +87,13 @@
             <div>
                 <h3>Blockquote</h3>
                 <blockquote>
-                    <p>
-                        I will be the leader of a company that ends up being worth billions of dollars, because I got
-                        the answers.
-                        I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push
-                        possibilities,
-                        to show people, this is the level that things could be at.
-                    </p>
+                    <p> I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
                     <cite>Kanye West, Musician</cite>
                 </blockquote>
             </div>
         </section>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
 </body>
 
 </html>
