--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="rtl">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0; viewport-fit=cover" />
-    <title>Styleguide - Techium</title>
+    <meta charset="utf-8" />
     <meta name="description" content="Techium is a digital agency" />
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Styleguide - Techium</title>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.png" type="image/png" />
 </head>
 
 <body>
-    <header>
-    </header>
+
+    <header></header>
     <main>
         <section>
             <header>
@@ -27,23 +27,14 @@
         </section>
         <section>
             <header>
-                <h2>
-                    Paragraph
-                </h2>
+                <h2>Paragraph</h2>
             </header>
-            <h2>
-                Heading with a subtitle
-            </h2>
-            <p>
-                This is my subtitle
-            </p>
-            <p>
-                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
+            <h2>Heading with a subtitle</h2>
+            <p>This is my subtitle</p>
+            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
                 faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
-                varius montes viverra nibh in adipiscing blandit tempus accumsan.
-            </p>
+                varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
         </section>
-
         <!-- Lists -->
         <section>
             <header>
@@ -56,14 +47,12 @@
                     <li>Sagittis adipiscing lorem eleifend.</li>
                     <li>Felis enim feugiat dolore viverra.</li>
                 </ul>
-
                 <h3>Ordered</h3>
                 <ol>
                     <li>Dolor pulvinar etiam magna etiam.</li>
                     <li>Sagittis adipiscing lorem eleifend.</li>
                     <li>Felis enim feugiat dolore viverra.</li>
                 </ol>
-
                 <h3>Definition</h3>
                 <dl>
                     <dt>Definition List title</dt>
@@ -77,7 +66,6 @@
                 </dl>
             </div>
         </section>
-
         <!-- Horizontal rule -->
         <section>
             <header>
@@ -87,7 +75,6 @@
                 <hr>
             </div>
         </section>
-
         <!-- Blockquotes -->
         <section>
             <header>
@@ -100,28 +87,21 @@
             <div>
                 <h3>Blockquote</h3>
                 <blockquote>
-                    <p>
-                        I will be the leader of a company that ends up being worth billions of dollars, because I got
-                        the answers.
-                        I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push
-                        possibilities,
-                        to show people, this is the level that things could be at.
-                    </p>
+                    <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the
+                        answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to
+                        push possibilities, to show people, this is the level that things could be at.</p>
                     <cite>Kanye West, Musician</cite>
                 </blockquote>
             </div>
         </section>
-
         <!-- Typography -->
         <section>
             <header>
                 <h2>Typography</h2>
             </header>
             <div>
-                <address>
-                    320 Stewart Avenue, Unit 12<br>
-                    New York City NY 10001
-                </address>
+                <address>320 Stewart Avenue, Unit 12<br>
+                    New York City NY 10001</address>
             </div>
             <div>
                 <pre>
@@ -132,14 +112,11 @@
                 </pre>
             </div>
             <div>
-                <p>
-                    Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget
+                <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget
                     dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi
-                    consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.
-                </p>
+                    consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
             </div>
         </section>
-
         <!-- Table -->
         <section>
             <header>
@@ -173,9 +150,7 @@
                 </tbody>
             </table>
         </section>
-        
         <!-- Details -->
-        <!-- Add a new line and a comment with text "Details" -->
         <section>
             <header>
                 <h2>Details</h2>
@@ -184,21 +159,19 @@
                 <h3>Default</h3>
                 <details>
                     <summary>Show/Hide me</summary>
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 </details>
             </div>
             <div>
                 <h3>Open</h3>
-                <details open>
+                <details>
                     <summary>Always open</summary>
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 </details>
             </div>
         </section>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
 </body>
 
 </html>
-
